--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html {
-    background-color: black;
+    background-color:#141414
 }
 
 header {
 
-    background-color: black;
+    background-color:#141414;
     font-size: 68px;
     margin: auto;
     text-align: center;
@@ -14,4 +14,90 @@ header span {
     color: red;
     font-family: 'Arial Black', Arial, sans-serif;
     font-weight: bold;
+    letter-spacing: 4px;
+}
+
+body {
+    background-color:#141414
+}
+
+main {
+    padding-top: 20px;
+    background-color:#141414;
+    margin: auto;
+    font-weight: bold;
+    font-family: 'Arial Black', Arial, sans-serif;
+}
+
+footer {
+    background-color:#141414;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+}
+
+footer span {
+    color: white;
+    font-family: 'Arial Black', Arial, sans-serif;
+    font-weight: bold;
+}
+
+#new_serie {
+    background-color: red;
+    color: white;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#nav-container {
+    background-color: #141414;
+    padding-top: 20px;
+}
+
+.genres {
+    color: white;
+    padding-top: 30px;
+}
+
+.container {
+    background-color:#141414;
+}
+
+.card {
+    width: 416px;
+    height: 610px;
+    background-color:#141414;
+    border: none;
+    border-radius: 10px
+}
+
+.serie-title {
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.series-cover {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+}
+
+.divider {
+    border: none;
+    height: 5px;
+    width: 100%;
+    background-color: white;
+    margin: 20px auto;
+    border-radius: 5px;
 }
