--- a/style.css
+++ b/style.css
@@ -73,11 +73,8 @@ footer span {
 }
 
 .card {
-    width: 416px;
-    height: 610px;
-    background-color:#141414;
     border: none;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .serie-title {
