--- a/main_detalle_notfiml.css
+++ b/main_detalle_notfiml.css
@@ -4,7 +4,7 @@ html {
 
 header {
 
-    background-color: black;
+    background-color: #141414;
     font-size: 68px;
     margin: auto;
     text-align: center;
@@ -15,21 +15,55 @@ header span {
     font-family: 'Arial Black', Arial, sans-serif;
     font-weight: bold;
 }
-#Text_sinopsis{
-    width: 80%;
+#Titulo{
+    color:white;
+    text-align: start;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
+}
+.divider {
+    border: none;
+    height: 5px;
+    width: 100%;
+    background-color: white;
+    border-radius: 5px;
+}
+div h3{
+    color: white;
+    font-size: 60px;
+}
+div p{
+    color:white;
+    font-size:20px;
+}
+div h5{
+    color:white;
+    text-align: start;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+}
+#Text_sinopsis {
+    background-color: #1f1f1f; 
+    border: 1px solid  #1f1f1f; 
+    border-radius: 5px; 
+    padding: 15px; 
 }
 #FReproducir{
     display: grid;
     justify-content: center;
 }
-.btn.btn-danger{
-    border-radius: 50%;
-    width: 80px;       
-    height: 80px; 
-    background-color: red;     
+#row_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn.btn-danger {
+    width: 70%;
+    background-color: red;
 }
 .bi.bi-play-fill{
     font-size: 35px;
+    color: white
 }
 #Text_box{
     width: 80%;
@@ -45,7 +79,7 @@ header span {
 
 .row{
 padding: 20px;
-background-color: #ebdcdc; 
+background-color:#141414; 
 }
 .form-label{
 color: white
@@ -60,8 +94,7 @@ color: white
     width: 100  px;
     box-shadow: 0px 4px 20px #00000080;
     }
-
-div h1 {
+div h2 {
     color: #e50914;
     text-align: center;
     margin-bottom: 30px;
