--- a/styles_nuevo-elem.css
+++ b/styles_nuevo-elem.css
@@ -11,6 +11,19 @@ body {
   margin: 0;
 }
 
+footer {
+  position: fixed;         
+  bottom: 0;
+  left: 0;
+  width: 100%;             
+  background-color: #141414; 
+  color: #ffffff;          
+  text-align: left; 
+  margin-left: 10px;       s
+  padding: 8px 0;
+}
+
+
 .form-select option[value=""] {
   color: #aaaaaa;
 }
