--- a/main_detalle_notfiml.css
+++ b/main_detalle_notfiml.css
@@ -15,11 +15,14 @@ header span {
     font-family: 'Arial Black', Arial, sans-serif;
     font-weight: bold;
 }
-#Titulo{
+#Titulo{ 
     color:white;
     text-align: start;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
+}
+.badge.bg-warning {
+    font-size: 30%;
 }
 .divider {
     border: none;
@@ -42,6 +45,11 @@ div h5{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
 }
+#ColumnDerecha{
+    display: grid;
+    justify-content: center;
+}
+
 #Text_sinopsis {
     background-color: #1f1f1f; 
     border: 1px solid  #1f1f1f; 
@@ -102,6 +110,9 @@ div h2 {
     font-weight: bold;
     letter-spacing: 4 px;
 }
+.form-container .btn-default {
+    color: #ffffff;            
+}
 
 .form-group {
     display: flex;
@@ -128,26 +139,22 @@ div h2 {
 .form-control::placeholder {
     color: #aaaaaa;
 }
-
-.form-container .btn-volver {
-    background-color:  #e50914; 
+.form-container .btn-default {
     color: #ffffff;            
-    border-radius: 5px;
-    font-weight: bold;
-    border: none;
-    padding: 10px 20px;
-    margin-right: 10px;
 }
 
 .form-container .btn-default {
+    display: block;
     background-color: #e50914; 
     color: #ffffff;            
     border-radius: 5px;
-    font-weight: bold;
-    margin-left: 233px;
-    border: none;
     padding: 10px 20px;
+    font-size: 25px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .form-container input[type="file"].form-control::file-selector-button {
     background-color: #e50914;
@@ -162,4 +169,11 @@ div h2 {
     padding: 100px 100px;
     display: grid;
     align-content: center;
+}
+#BotonS {
+    display: block;
+    background-color: #e50914; 
+    color: #ffffff;             
+    font-size: 18px;
+    border-color: #2b2b2b;
 }
