--- a/styles_nuevo-elem.css
+++ b/styles_nuevo-elem.css
@@ -19,7 +19,7 @@ footer {
   background-color: #141414; 
   color: #ffffff;          
   text-align: left; 
-  margin-left: 10px;       s
+  margin-left: 10px;       
   padding: 8px 0;
 }
 
