--- a/main_detalle_notfiml.css
+++ b/main_detalle_notfiml.css
@@ -165,15 +165,19 @@ div h2 {
     border-radius: 5px;
     background-color: #e50914;
 }
-.btn-group{
-    padding: 100px 100px;
-    display: grid;
-    align-content: center;
+.botones-grupo {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    padding: 20px 0;
 }
-#BotonS {
-    display: block;
+
+.btn-custom {
     background-color: #e50914; 
     color: #ffffff;             
     font-size: 18px;
-    border-color: #2b2b2b;
+    border: 1px solid #2b2b2b;
+    border-radius: 5px;
+    padding: 8px 20px;
+    width: auto;
 }
