--- a/styles_nuevo-elem.css
+++ b/styles_nuevo-elem.css
@@ -14,6 +14,19 @@ footer {
     min-height: 500px;
 }
 
+header {
+  background-color:#1f1f1f;
+  font-size: 68px;
+  margin: auto;
+  text-align: center;
+}
+
+header span {
+    color: red;
+    font-family: 'Arial Black', Arial, sans-serif;
+    font-weight: bold;
+    letter-spacing: 4px;
+}
 .footer-texto{
     font-size: 1.5rem;
     color: white;
@@ -63,18 +76,7 @@ footer {
   background-color: #1f1f1f;
   border-radius: 10px;
   padding: 40px;
-  width: 500px;
-  margin: 60px auto;
   box-shadow: 0px 4px 20px #00000080;
-}
-
-.form-container h1 {
-  color: #e50914;
-  text-align: center;
-  margin-bottom: 30px;
-  font-size: 50px;
-  font-weight: bold;
-  letter-spacing: 4 px;
 }
 
 .form-group {
@@ -114,7 +116,7 @@ footer {
   color: #ffffff;            
   border-radius: 5px;
   font-weight: bold;
-  margin-left: 233px;
+  float: right;
 }
 
 .form-container input[type="file"].form-control::file-selector-button {
