--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ footer {
     min-height: 500px;
 }
 
+.logo-footer {
+    width: 200px;
+    height: auto;
+    margin-top: 20px;
+}
+
 .footer-texto{
     font-size: 1.5rem;
     color: white;
@@ -92,9 +98,12 @@ nav{
     
 }
 
+.btn.btn-primary:hover {
+    background-color: darkred;
+}
+
 .fixed-img {
     height: 600px;
-    
 }
 
 .genres {
