--- a/styles_nuevo-elem.css
+++ b/styles_nuevo-elem.css
@@ -27,14 +27,20 @@ header span {
     font-weight: bold;
     letter-spacing: 4px;
 }
-.footer-texto{
+.footer-text{
     font-size: 1.5rem;
     color: white;
     padding: 20px;
 
 }
 
-.iconos-redes-sociales a{
+.logo-footer {
+    width: 200px;
+    height: auto;
+    margin-top: 20px;
+}
+
+.icons-social-networks a{
     width: 50px;
     height: 50px;
     display: flex;
@@ -47,22 +53,22 @@ header span {
     transition: all 0.2s ease-in;
 }
 
-.iconos-redes-sociales i {
+.icons-social-networks i {
     color: white;
     font-size: 1.5rem;
     transition: all 0.2s ease-in;
 }
 
-.iconos-redes-sociales a:hover {
+.icons-social-networks a:hover {
     background-color: white;
     border: 2px solid rgb(13, 110, 253);
 }
 
-.iconos-redes-sociales a:hover i {
+.icons-social-networks a:hover i {
     color: black;
 }
 
-.derechos-de-autor {
+.copyright {
     font-size: 15px;
     color: #aeaeae;
     padding: 20px;
