--- a/styles_nuevo-elem.css
+++ b/styles_nuevo-elem.css
@@ -15,7 +15,7 @@ footer {
 }
 
 header {
-  background-color:#1f1f1f;
+  background-color:#141414;
   font-size: 68px;
   margin: auto;
   text-align: center;
