--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Bootstap css and js -->
-    <link rel="shortcut icon" href="img/logo.ico">
+    <link rel="shortcut icon" href="/images/image/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -21,7 +21,7 @@
             <form class="d-flex w-100 justify-content-center" role="search" id="barra_busqueda">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
                 <button class="btn btn-outline-danger" type="submit">Search</button>
-                <a class="btn btn-primary ms-2" href="main_nuevo-elem.html" role="button">+</a>
+                <a class="btn btn-primary ms-2" href="/main_nuevo-elem.html" role="button">+</a>
             </form>
         </div>
     </nav>
@@ -33,7 +33,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/demon_slayer.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/kimetsu.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Demon Slayer <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -48,7 +48,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/death_note.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images//death_note.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Death Note <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -63,7 +63,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/one_piece.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/one_piece.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">One Piece <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -82,7 +82,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/stranger_things.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/stranger_things.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Stranger Things <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -97,7 +97,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_walking_dead.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_walking_dead.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The Walking Dead <span class="badge rounded-pill bg-danger">18+</span></h5>
@@ -112,7 +112,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/american_horror_story.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/american_horror_story.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">American Horror Story <span class="badge rounded-pill bg-danger">18+</span></h5>
@@ -131,7 +131,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/brooklyn_nine_nine.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/brooklyn_nine_nine.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Brooklyn Nine-Nine <span class="badge rounded-pill bg-warning">12+</span></h5>
@@ -146,7 +146,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_office.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_office.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The Office <span class="badge rounded-pill bg-warning" >12+</span></h5>
@@ -161,7 +161,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/friends.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/friends.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Friends <span class="badge rounded-pill bg-warning">12+</span></h5>
@@ -180,7 +180,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/breaking-bad.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/breaking-bad.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Breking Bad <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -195,7 +195,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/peaky_blinders.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/peaky_blinders.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Peaky Blinders <span class="badge rounded-pill bg-danger" >18+</span></h5>
@@ -210,7 +210,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_crown.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_crown.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The Crown <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -229,7 +229,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_mandalorian.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_mandalorian.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The Mandalorian <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -244,7 +244,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/black_mirror.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/black_mirror.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Black Mirror <span class="badge rounded-pill bg-danger" >18+</span></h5>
@@ -259,7 +259,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_boys.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_boys.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The boys <span class="badge rounded-pill bg-danger">18+</span></h5>
@@ -278,7 +278,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/vikingos.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/vikingos.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Vikings <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -293,7 +293,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/prison_break.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/prison_break.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Prison Break <span class="badge rounded-pill bg-warning" >16+</span></h5>
@@ -308,7 +308,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/24.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/24.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">24 <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -327,7 +327,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/hawaii_5-0.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/hawaii_5-0.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Hawaii 5-0 <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -342,7 +342,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/s_w_a_t.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/s_w_a_t.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">S.W.A.T <span class="badge rounded-pill bg-warning" >16+</span></h5>
@@ -357,7 +357,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/sherlock.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/sherlock.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Sherlock <span class="badge rounded-pill bg-warning">13+</span></h5>
@@ -376,7 +376,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/you.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/you.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">You <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -391,7 +391,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/dexter.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/dexter.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Dexter <span class="badge rounded-pill bg-warning" >16+</span></h5>
@@ -406,7 +406,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/homeland.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/homeland.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Homeland <span class="badge rounded-pill bg-warning">16+</span></h5>
@@ -425,7 +425,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/the_last_dance.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/the_last_dance.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">The  Last Dance <span class="badge rounded-pill bg-primary">7+</span></h5>
@@ -440,7 +440,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/our_planet.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/our_planet.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Our Planet <span class="badge rounded-pill bg-primary" >7+</span></h5>
@@ -455,7 +455,7 @@
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
-                            <img src="img/making_a_murderer.jpg" class="card-img-top fixed-img" alt="...">
+                            <img src="/images/making_a_murderer.jpg" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Making a Murderer <span class="badge rounded-pill bg-warning">12+</span></h5>
@@ -471,7 +471,7 @@
         </div>
     </main>
     <footer class="d-flex flex-column align-items-center justify-content-center">
-        <img src="img/logo.png" alt="footer" class="logo-footer">
+        <img src="/images/image/logo.png" alt="footer" class="logo-footer">
         <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
         <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
             <a href="#">
