--- a/views/main_detalle_notfiml.html
+++ b/views/main_detalle_notfiml.html
@@ -11,9 +11,7 @@
     <title>Notfilm</title>
 </head>
 <body>
-    <header>
-        <span>NOTFILM</span>
-    </header>
+    {{>header}}
     <div class="row">
         <div class="col-lg-8 col-12">
             <div class="row">
@@ -106,21 +104,6 @@
         </div>
     </div>                  
 </div>
-<footer class="d-flex flex-column align-items-center justify-content-center">
-    <img src="img/logo.png" alt="footer" class="logo-footer">
-    <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
-    <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#">
-            <i class="bi bi-twitter-x"></i>
-        </a>
-        <a href="#">
-            <i class="bi bi-instagram"></i>
-        </a>
-        <a href="#">
-            <i class="bi bi-facebook"></i>
-        </a>
-    </div>
-    <div class="copyright">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
-</footer>
+{{>footer}}
 </body>
 </html>
