--- a/views/main_nuevo-elem.html
+++ b/views/main_nuevo-elem.html
@@ -10,9 +10,7 @@
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <title>Notfilm</title>
 </head>
-<header>
-  <span>NOTFILM</span> 
-</header>
+{{>header}}
 <body>
 <div class="container my-5"> 
   <div class="row justify-content-center"> 
@@ -64,21 +62,6 @@
     </div>
   </div>
 </div>
-  <footer class="d-flex flex-column align-items-center justify-content-center"> 
-      <img src="img/logo.png" alt="footer" class="logo-footer"> 
-      <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
-      <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
-          <a href="#">
-              <i class="bi bi-twitter-x"></i>
-          </a>
-          <a href="#">
-              <i class="bi bi-instagram"></i>
-          </a>
-          <a href="#">
-              <i class="bi bi-facebook"></i>
-          </a>
-      </div>
-      <div class="copyright">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169</div>
-  </footer>
+  {{>footer}}
 </body>
 </html>
