--- a/views/main_nuevo-elem.html
+++ b/views/main_nuevo-elem.html
@@ -16,19 +16,19 @@
   <div class="row justify-content-center"> 
     <div class="col-12 col-md-8 col-lg-6"> 
       <div class="form-container">
-        <form>
+        <form action="/serie/new" method="POST">
           <div class="form-group">
             <label for="titulo" class="form-label">Título</label>
-            <input type="text" class="form-control" id="titulo" placeholder="Nombre de la serie" required/> 
+            <input type="text" class="form-control" id="titulo" name="title" placeholder="Nombre de la serie" required/> 
           </div>
 
           <div class="form-group">
             <label for="sinopsis" class="form-label">Sinopsis</label>
-            <textarea class="form-control" id="sinopsis" placeholder="Breve descripción de la serie" rows="3" required></textarea> 
+            <textarea class="form-control" id="sinopsis" name="synopsis" placeholder="Breve descripción de la serie" rows="3" required></textarea> 
           </div>
           <div class="form-group">
             <label for="genero" class="form-label">Género</label>
-            <select id="genero" class="form-select" required> 
+            <select id="genero" name="genre" class="form-select" required> 
               <option value="">Selecciona un género</option>
               <option value="accion">Acción</option>
               <option value="aventura">Aventura</option>
@@ -45,17 +45,17 @@
 
           <div class="form-group">
             <label for="portada" class="form-label">Portada</label>
-            <input type="file" class="form-control" id="portada" /> 
+            <input type="file" name="image" class="form-control" id="portada" /> 
           </div>
 
           <div class="form-group">
             <label for="año" class="form-label">Año de estreno</label>
-            <input type="number" class="form-control" id="año" placeholder="Año en el que se estrenó" required /> 
+            <input type="number" class="form-control" name="premiere" id="año" placeholder="Año en el que se estrenó" required /> 
           </div>
 
           <div class="form-actions">
-            <button type="button" class="btn btn-volver" onclick="location.href='main.html'">Cancelar</button> 
-            <button type="submit" class="btn btn-default">Guardar</button> 
+            <button type="button" class="btn btn-volver" onclick="location.href='/'">Cancelar</button> 
+            <button type="submit" value="Send" class="btn btn-default">Guardar</button>   
           </div>
         </form>
       </div>
