Fix image, create getEpisode and update data

--- a/views/index.html
+++ b/views/index.html
@@ -32,13 +32,13 @@
                 {{#series}}
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
-                        <a href="main_detalle/{{_id}}">
-                            <img src="/images/kimetsu.jpg" class="card-img-top fixed-img" alt="...">
+                        <a href="main_detalle/{{_id}}/1">
+                            <img src="/serie/{{_id}}/image" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">{{title}}<span class="badge rounded-pill bg-warning">{{ageClassification}}</span></h5>
                             <ul>
-                                <li>Genero: {{gender}}</li>
+                                <li>Genero: {{genre}}</li>
                                 <li>Estreno: {{premiere}}</li>
                                 <li>Temporadas: {{seasons}}</li>
                             </ul>
