--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,10 @@ main {
     font-family: 'Arial Black', Arial, sans-serif;
 }
 
+.bg-orange{
+    background-color: orange;
+}
+
 footer {
     background-color:#292929;
     min-height: 500px;
