--- a/views/main_detalle_notfilm.html
+++ b/views/main_detalle_notfilm.html
@@ -15,8 +15,8 @@
     <div class="row">
         <div class="col-lg-8 col-12">
             <div class="row">
-                <h1 id="Title" class="card-title">{{serie.title}}<span class="badge rounded-pill bg-warning">{{serie.ageClassification}}+</span></h1>
-                <hr class="divider">
+                <h1 id="Title" class="card-title">{{serie.title}}<span class="badge rounded-pill {{serie.badgeClass}}">{{serie.ageClassification}}+</span></h1>
+                <hr class="divider"></h1>
             </div>
             <div class="row">
                 <p>Genero: {{serie.genre}}</p>
