--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
                             <img src="/serie/{{_id}}/image" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">{{title}}<span id= "ageCl" class="badge rounded-pill {{badgeClass}}">+{{ageClassification}}</span></h5>
+                            <h5 class="card-title">{{title}} <span  class="badge rounded-pill {{badgeClass}}">+{{ageClassification}}</span></h5>
                             <ul>
                                 <li>Genero: {{genre}}</li>
                                 <li>Estreno: {{premiere}}</li>
